[BOTS-472] build.gradle for pushing to Sonatype